separate service globals into singleton