@@ -1,6 +1,6 @@
 package org.models;
 
-import org.classes.UserData;
+import org.classes.CourseData;
 import org.database.DatabaseClass;
 
 import java.util.AbstractMap;
@@ -8,30 +8,27 @@ import java.util.ArrayList;
 import java.util.Map;
 import java.util.Optional;
 
-public abstract class UserDB extends UserData implements DatabaseClass<UserDB> {
+public abstract class CourseDB extends CourseData implements DatabaseClass<CourseDB> {
     protected long pk = -1;
-    public UserDB(){}
-    public UserDB(String username, String password,String name, String email) {
-        super(username,password,name,email);
+    public CourseDB(boolean create){
+        if(create) createTable();
+    }
+    public CourseDB(String name) {
+        super(name);
 
         createTable();
-        /// pk = insert();
     }
 
     @Override
     public String tableName() {
-        return "userCahut";
+        return "course";
     }
 
     @Override
     public ArrayList<Map.Entry<String, String>> tableColumns() {
         ArrayList<Map.Entry<String, String>> columns = new ArrayList<>();
 
-        columns.add(new AbstractMap.SimpleEntry<>("name", "varchar(100)"));
-        columns.add(new AbstractMap.SimpleEntry<>("email", "varchar(100)"));
-        columns.add(new AbstractMap.SimpleEntry<>("password", "varchar(66)"));
-        columns.add(new AbstractMap.SimpleEntry<>("username", "varchar(64)"));
-
+        columns.add(new AbstractMap.SimpleEntry<>("name", "varchar(64)"));
 
         return columns;
     }
@@ -41,9 +38,6 @@ public abstract class UserDB extends UserData implements DatabaseClass<UserDB> {
         ArrayList<String> values = new ArrayList<>();
 
         values.add(String.valueOf(name));
-        values.add(String.valueOf(email));
-        values.add(String.valueOf(passwordHash));
-        values.add(String.valueOf(username));
 
         return values;
     }
@@ -59,14 +53,11 @@ public abstract class UserDB extends UserData implements DatabaseClass<UserDB> {
         Optional<ArrayList<String>> values = queryByPk(queryPk);
         if (values.isEmpty()) return;
 
-        name = values.get().get(0);
-        email = values.get().get(1);
-        passwordHash = values.get().get(2);
-        username = values.get().get(3);
+        name = values.get().getFirst();
     }
 
     @Override
-    public UserDB save() {
+    public CourseDB save() {
         pk = insert();
         return this;
     }
